--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,24 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
+.bg-fadeIn{
+    animation: fadeIn 0.5s ease-in forwards;
+    animation-iteration-count: 1;
+}
+
+.bg-fadeOut{
+    animation: fadeOut 0.5s ease-in forwards;
+    animation-iteration-count: 1;
+}
+
+.modal-scaleIn {
+    animation: scaleIn 0.3s ease-in forwards;
+    animation-iteration-count: 1;
+}
+
+.modal-scaleOut {
+    animation: scaleOut 0.3s ease-in forwards;
+    animation-iteration-count: 1;
+}
