add reset state

--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -137,7 +137,7 @@
             </div>
         </div>
     </div>
-    <div class="fixed top-0 left-0 w-full h-full z-50" *ngIf="(productState && productState.loading) || (productDeleteState && productDeleteState.loading)">
+    <div class="fixed top-0 left-0 w-full h-full z-50" *ngIf="(productState && productState.loading)">
         <app-loading></app-loading>
     </div>
 </div>
