--- a/src/app/product/components/product-card/product-card.component.html
+++ b/src/app/product/components/product-card/product-card.component.html
@@ -1,5 +1,6 @@
-<div class="rounded-xl shadow-xl">
-    <img [routerLink]="['/product/'+product.id]" class="rounded-t-xl w-full h-36 object-contain" [src]="sanitizeImage(product.image)" [alt]="product.name">
+<div class="rounded-xl shadow-xl" [routerLink]="['/product/'+product.id]" >
+    <img class="rounded-t-xl w-full h-36 object-contain" 
+        [src]="sanitizeImage(product.image)" [alt]="product.name">
     <div class="flex flex-col p-7">
         <p class="text-gray-400 text-sm mb-1 uppercase">{{product.sku}}
         </p>
@@ -14,10 +15,6 @@
         <div class="flex flex-col sm:flex-row mt-5 items-center justify-start">
             <p class="font-bold text-sm mr-2">{{product.price | currency: 'COP' : 'symbol' : '1.0-0'}}</p>
             <div class="flex flex-row w-full justify-end gap-2 mt-4 sm:mt-0">
-                <mat-icon class="transition-transform transform hover:scale-105" aria-hidden="false" 
-                    fontIcon="border_color" (click)="openModal()"></mat-icon>
-                <mat-icon class="transition-transform transform hover:scale-105" aria-hidden="false" 
-                    fontIcon="delete_forever" (click)="confirmDeleteProduct()"></mat-icon>
             </div>
         </div>
     </div>
