--- a/src/app/product/components/product-detail/product-detail.component.html
+++ b/src/app/product/components/product-detail/product-detail.component.html
@@ -60,8 +60,11 @@
                 <hr class="bg-gray-200 w-full mt-4" />
             </div>
 
-            <button class="focus:outline-none focus:ring-2 hover:bg-black focus:ring-offset-2 focus:ring-gray-800 font-medium text-base }
-                leading-4 text-white bg-gray-800 w-full py-5 lg:mt-12 mt-6">Agregar a la bolsa</button>
+            <button class="focus:outline-none focus:ring-2 hover:bg-yellow-400 focus:ring-offset-2 focus:ring-gray-800 font-medium text-base 
+                leading-4 text-gay-900 bg-yellow-300 w-full py-5 lg:mt-12 mt-6" (click)="openCloseModal(true)">Editar</button>
+
+            <button class="focus:outline-none focus:ring-2 hover:bg-black focus:ring-offset-2 focus:ring-gray-800 font-medium text-base 
+                leading-4 text-white bg-gray-800 w-full py-5 lg:mt-6 mt-6" (click)="confirmDeleteProduct()">Eliminar</button>
         </div>
 
         <!-- Preview Images Div For larger Screen-->
@@ -72,7 +75,9 @@
             </div>
         </div>
     </div>
+    <app-create-edit-modal [product]="product" [isOpenModal]="openModal" createOrEdit="edit"
+        (emitCloseModal)="openCloseModal($event)" />
 </div>
-<div class="fixed top-0 left-0 w-full h-full z-50" *ngIf="productState && productState.loading">
+<div class="fixed top-0 left-0 w-full h-full z-50" *ngIf="(productState && productState.loading) || (productDeletedState && productDeletedState.loading)">
     <app-loading></app-loading>
 </div>
