fix responsive modal

--- a/src/app/product/components/create-edit-modal/create-edit-modal.component.html
+++ b/src/app/product/components/create-edit-modal/create-edit-modal.component.html
@@ -8,7 +8,7 @@
         </div>
         <div [ngClass]="{'scaleOut': !isOpenModal, 'scaleIn':isOpenModal}" class="inline-block align-bottom bg-white rounded-lg
             text-left overflow-hidden overflow-y-auto shadow-lx transform transition-all sm:my-8 
-            sm:align-middle sm:max-w-lg w-full max-h-[80vh] sm:max-h-screen z-50">
+            sm:align-middle sm:max-w-lg w-full max-h-[80vh] z-50">
             <div class="modal-wrapper bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
                 <div class="modal-wrapper-flex sm:flex sm:items-start relative mb-6">
                     <div class="modal-content text-center mt-3 sm:mt-0 w-full">
