--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -24,13 +24,14 @@
                         <div class="flex gap-2">
                             <input oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');"
                                 class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-                                id="priceMin" type="text" placeholder="Mínimo" [(ngModel)]="paramsAux.minPrice"
-                                (blur)="updateParams()">
+                                id="priceMin" type="text" placeholder="Mínimo" [(ngModel)]="paramsAux.minPrice">
                             <input oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');"
                                 class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-                                id="priceMax" type="text" placeholder="Máximo" [(ngModel)]="paramsAux.maxPrice"
-                                (blur)="updateParams()">
+                                id="priceMax" type="text" placeholder="Máximo" [(ngModel)]="paramsAux.maxPrice">
                         </div>
+                        <span class="text-red-500 italic text-sm" *ngIf="validatePriceFilter()">
+                            El precio máximo debe ser mayor al precio mínimo
+                        </span>
                     </div>
                     <div class="mb-4">
                         <label class="block text-gray-700 text-sm font-bold mb-2" for="name">
@@ -39,22 +40,31 @@
                         <div class="flex gap-2">
                             <input oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');"
                                 class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-                                id="stockMin" type="text" placeholder="Mínimo" [(ngModel)]="paramsAux.minStock"
-                                (blur)="updateParams()">
+                                id="stockMin" type="text" placeholder="Mínimo" [(ngModel)]="paramsAux.minStock">
                             <input oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');"
                                 class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-                                id="stockMax" type="text" placeholder="Máximo" [(ngModel)]="paramsAux.maxStock"
-                                (blur)="updateParams()">
+                                id="stockMax" type="text" placeholder="Máximo" [(ngModel)]="paramsAux.maxStock">
                         </div>
+                        <span class="text-red-500 italic text-sm" *ngIf="validateStockFilter()">
+                            El stock máximo debe ser mayor al stock mínimo
+                        </span>
                     </div>
                 </li>
+                <li>
+                    <div class="flex justify-end">
+                        <a (click)="updateParams()" class="flex w-fit items-end bg-gray-100 p-2 text-gray-900 rounded-lg dark:text-white
+                            dark:hover:bg-gray-700 group hover:bg-yellow-100 transition-transform transform hover:scale-105">
+                           <span>Aplicar</span>
+                        </a>
+                    </div>
+                 </li>
             </ul>
         </div>
     </aside>
     <div *ngIf="productsPaginated" class="mb-6 w-full">
-        <div class="flex flex-col sm:flex-row justify-between px-8">
+        <div class="flex flex-col lg:flex-row justify-between px-8">
             <div class="flex justify-center">
-                <div class="w-60 py-7">
+                <div class="w-96 py-7">
                     <label for="default-search"
                         class="mb-2 text-sm font-medium text-gray-900 sr-only dark:text-white">Buscar</label>
                     <div class="relative">
@@ -69,7 +79,7 @@
                             class="block w-full p-4 pl-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 
                                 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 
                                 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                            placeholder="Busca tu producto" required>
+                            placeholder="Encuentra tu producto" required>
                         <button type="submit" (click)="updateParams()"
                             class="text-white absolute right-2.5 bottom-2.5 bg-yellow-300 hover:bg-yellow-400 focus:ring-4 
                                 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 dark:bg-blue-600
@@ -78,7 +88,7 @@
                 </div>
             </div>
             <div class="flex flex-col sm:flex-row gap-2 sm:items-center items-end">
-                <div class="font-medium w-full text-end sm:text-start">
+                <div class="font-medium w-fit min-w-[100px] text-end sm:text-start">
                     <label for="underline_select">Ordenar por:</label>
                 </div>
                 <select id="underline_select" class="max-w-[200px] block py-2.5 px-0 w-full text-sm text-gray-500 bg-transparent border-0 border-b-2
