change reviews for stock

--- a/src/app/product/components/product-detail/product-detail.component.html
+++ b/src/app/product/components/product-detail/product-detail.component.html
@@ -43,7 +43,7 @@
                     </svg>
                 </div>
                 <p class="focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-800 font-normal text-base leading-4 
-                    text-gray-700 hover:underline hover:text-gray-800 duration-100 cursor-pointer">22 reviews</p>
+                    text-gray-700 hover:underline hover:text-gray-800 duration-100 cursor-pointer">{{product.stock}} disponibles</p>
             </div>
 
             <p class="font-normal text-base leading-6 text-gray-600 mt-7">{{product.description}}</p>
